--- a/Municipality_Services_PROG7321_POE.csproj
+++ b/Municipality_Services_PROG7321_POE.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="WindowsForms\Issues.resx">
       <DependentUpon>Issues.cs</DependentUpon>
@@ -140,6 +141,7 @@
     <EmbeddedResource Include="WindowsForms\ViewEvents.resx">
       <DependentUpon>ViewEvents.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="festival.webp" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -152,6 +154,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="muizenburg.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
