Adding dashboard form.

--- a/Municipality_Services_PROG7312_POE.csproj
+++ b/Municipality_Services_PROG7312_POE.csproj
@@ -46,29 +46,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ServiceRequestForm.cs">
+    <Compile Include="WindowsForms\Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ServiceRequestForm.Designer.cs">
+    <Compile Include="WindowsForms\Dashboard.Designer.cs">
+      <DependentUpon>Dashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WindowsForms\ServiceRequestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WindowsForms\ServiceRequestForm.Designer.cs">
       <DependentUpon>ServiceRequestForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddEventForm.cs">
+    <Compile Include="WindowsForms\AddEventForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddEventForm.Designer.cs">
+    <Compile Include="WindowsForms\AddEventForm.Designer.cs">
       <DependentUpon>AddEventForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ReportIssuesForm.cs">
+    <Compile Include="WindowsForms\ReportIssuesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReportIssuesForm.Designer.cs">
+    <Compile Include="WindowsForms\ReportIssuesForm.Designer.cs">
       <DependentUpon>ReportIssuesForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ServiceStatusUserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ServiceStatusUserControl.Designer.cs">
-      <DependentUpon>ServiceStatusUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControl\EventsUserControl.cs">
       <SubType>UserControl</SubType>
@@ -78,42 +78,30 @@
     </Compile>
     <Compile Include="Classes\ReportData.cs" />
     <Compile Include="Classes\EventData.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="WindowsForms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="WindowsForms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WindowsForms\Issues.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WindowsForms\Issues.Designer.cs">
-      <DependentUpon>Issues.cs</DependentUpon>
-    </Compile>
-    <Compile Include="WindowsForms\ViewEvents.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WindowsForms\ViewEvents.Designer.cs">
-      <DependentUpon>ViewEvents.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="ServiceRequestForm.resx">
+    <EmbeddedResource Include="WindowsForms\Dashboard.resx">
+      <DependentUpon>Dashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WindowsForms\ServiceRequestForm.resx">
       <DependentUpon>ServiceRequestForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddEventForm.resx">
+    <EmbeddedResource Include="WindowsForms\AddEventForm.resx">
       <DependentUpon>AddEventForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ReportIssuesForm.resx">
+    <EmbeddedResource Include="WindowsForms\ReportIssuesForm.resx">
       <DependentUpon>ReportIssuesForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ServiceStatusUserControl.resx">
-      <DependentUpon>ServiceStatusUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControl\EventsUserControl.resx">
       <DependentUpon>EventsUserControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="WindowsForms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -126,12 +114,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="WindowsForms\Issues.resx">
-      <DependentUpon>Issues.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="WindowsForms\ViewEvents.resx">
-      <DependentUpon>ViewEvents.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -144,6 +126,57 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fad05dafe7964a89b8c4d4adc2266c85.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tech_workshop.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\workshop.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\flower_fest.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\festival_sa.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hall_meeting.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\christmas_parade.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\food_donation.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\beach_cleanup.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cultural_dance.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\art_gallery.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\yoga_park.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\health_checkup.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\voting.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\independence_parade.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Male User.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Male User1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
