--- a/Municipality_Services_PROG7312_POE.csproj
+++ b/Municipality_Services_PROG7312_POE.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BinarySearchTree.cs" />
     <Compile Include="WindowsForms\Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
